# Iterare

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
code/tools/tide/: __init__.py  cli.py  client.py  execute.py  jobs.py  manifests.py
docs/: steering_prefixes.md  structure.md
src/iterare/: __init__.py  checkpointer.py  cli.py  graph.py  notify.py  state.py
src/iterare/agents/: __init__.py  base.py  interface.py  manager.py  master.py  worker.py
src/iterare/memory/: __init__.py
src/iterare/tools/: __init__.py  file_tools.py  tide_runner.py  tool_request.py
src/iterare/utils/: __init__.py  log.py  task.py
tasks/steer-001/: README.md  analyze_results.py  deep-research-report.md  submit_batch_exp28_33.py  submit_exp10.py  submit_exp11.py  submit_exp12.py  submit_exp13.py  submit_exp14.py  submit_exp15.py  submit_exp16.py  submit_exp17.py  submit_exp18.py  submit_exp19.py  submit_exp20.py  submit_exp21.py  submit_exp22.py  submit_exp23.py  submit_exp24.py  submit_exp25.py  submit_exp26.py  submit_exp27.py  submit_exp28.py  submit_exp29.py  submit_exp30.py  submit_exp31.py  submit_exp32.py  submit_exp33.py  submit_exp3_only.py  submit_exp5_exp6.py  submit_exp5_exp7.py  submit_exp6_gpu1.py  submit_exp7.py  submit_exp7_gpu1.py  submit_exp8.py  submit_exp9.py
tasks/steer-001/manager-1/: README.md
tasks/steer-001/manager-10/: README.md
tasks/steer-001/manager-11/: README.md
tasks/steer-001/manager-12/: README.md
tasks/steer-001/manager-13/: README.md
tasks/steer-001/manager-14/: README.md
tasks/steer-001/manager-15/: README.md
tasks/steer-001/manager-16/: README.md
tasks/steer-001/manager-17/: README.md
tasks/steer-001/manager-18/: README.md
tasks/steer-001/manager-19/: README.md
templates/: interface.yaml  manager.yaml  master.yaml  worker-tide.yaml  worker.yaml
tools/built/: tide.yaml
(+113 files in other folders)
