[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iterare"
version = "0.1.0"
description = "Agent-native applied AI research platform"
requires-python = ">=3.11"
dependencies = [
    "kubernetes>=28.0",
    "lancedb>=0.14",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
iterare = "iterare.cli:main"
tide = "tide.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/iterare", "code/tools/tide"]

[tool.hatch.metadata]
allow-direct-references = true
